# cosmic-object-scanner

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: lint-and-test.yml  model-validation.yml
docs/: ARCHITECTURE.md  DATASET.md  DEV_GUIDE.md  EVALUATION.md  MODELS.md
experimental/: dataset.ipynb
model_from_stratch/hybrid/: bbox_regressor.py  classifier.py  model.py
model_from_stratch/yolo/: Data_utils.py  building_blocks.py  constants.py  demo.ipynb  google_demo.ipynb  model.py  model_utils.py  utils.py
models/: coco_dataset.py  data.yaml  fasterrcnn_resnet50_fpn.py  pretrained.py  ultralytics-test.py  visualization.py
models/saved/: ultralytics-10-epochs-v2.pt:Zone.Identifier
models/yolo_run_10_epochs/: args.yaml  events.out.tfevents.1719756656.4e1c3afa4d8d.1437.0  results.csv
models/yolo_run_20_epochs/: args.yaml  events.out.tfevents.1719760769.6ebb447a4059.571.0  results.csv
og/: test.csv  train.csv
parsers/: annot_explore.py  split_coco.py  split_yolo.py
src/cosmic_object_scanner/custom_implementations/: bbox_regressor.py  building_blocks.py  classifier.py  constants.py  data_utils.py  model.py  model_utils.py  utils.py
src/cosmic_object_scanner/data/: annot_explore.py  split_coco.py  split_yolo.py
src/cosmic_object_scanner/models/: coco_dataset.py  coco_eval.py  coco_utils.py  engine.py  fasterrcnn_resnet50_fpn.py  transforms.py  ultralytics-test.py  ultralytics-yolo.py  ultralytics_test.py  ultralytics_yolo.py  utils.py  visualization.py
tests/: conftest.py
tests/custom_implementations/: test_building_blocks.py  test_constants.py  test_data_utils.py  test_model_utils.py  test_tf_models.py  test_utils.py
tests/data/: test_imports.py
tests/models/: test_coco_eval.py  test_coco_utils.py  test_fasterrcnn.py  test_imports.py  test_model_validation.py  test_models_utils.py  test_transforms.py  test_ultralytics.py  test_utils.py  test_visualization.py
